--- a/src/Blog/AdminBundle/Resources/views/Post/Smart/form.html.twig
+++ b/src/Blog/AdminBundle/Resources/views/Post/Smart/form.html.twig
@@ -16,6 +16,14 @@
     <div class="form-group">
         {{ form_row(form.active) }}
     </div>
+    
+     <div class="form-group">
+        {{ check_google_token() }}
+        {{ form_row(form.video) }}
+    </div>
+    
+    
+    
 
     <div class="gallery">
         <ul id="main-gallery" class="ace-thumbnails clearfix">
