--- a/src/Blog/FrontBundle/Resources/views/Blog/ESF/detail.html.twig
+++ b/src/Blog/FrontBundle/Resources/views/Blog/ESF/detail.html.twig
@@ -9,7 +9,11 @@
     <article>
         {% if post.image %}
             <div class="image">
+                {% if (post.video != '') %}
+                <iframe width="820" height="461" src="https://www.youtube.com/embed/{{ post.video }}?rel=0" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+                {% else %}
                 <img src="{{ path('serve_file', { id: post.id, fileName: post.image, folder: 'large', type: 'main' }) }}"/>
+                {% endif %}
             </div>
         {% endif %}
         <h1>{{ post.title }}</h1>
